# 1p-rlhf-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: arxiv_results.json
papers/: README.md
papers/pages/: 2307.11760v1_verbosity_bias_preference_labeling_llm_v1_manifest.txt  2310.05199_loose_lips_length_bias_rlhf_manifest.txt  2310.10076v1_verbosity_bias_preference_labeling_manifest.txt  2310.13548v4_towards_understanding_sycophancy_v4_manifest.txt
results/: exp1_results.json  exp1_user_stats.csv  exp2_model_paths.json  exp2_pair_stats.json  exp3_all_responses.json  exp3_metrics.json  exp3_sample_responses.json  exp3_similarities.json  exp4_judge_results.json  exp4_summary.json  statistical_tests.json
src/: analysis_and_plots.py  experiment1_prism_analysis.py  experiment2_dpo_fast.py  experiment2_dpo_training.py  experiment2_v3.py  experiment3_generate_evaluate.py  experiment4_llm_judge.py
